logs/offboard/build.make.021.log.stderr
/home/nvidia/kd_px4_can/src/offboard/src/offboard_node.cpp: In function ‘int main(int, char**)’:
/home/nvidia/kd_px4_can/src/offboard/src/offboard_node.cpp:49:5: error: ‘offb_set_mode’ was not declared in this scope
     offb_set_mode.requst.custom_mode = "OFFBOARD";
     ^
/home/nvidia/kd_px4_can/src/offboard/src/offboard_node.cpp:51:5: error: ‘mavros_msge’ has not been declared
     mavros_msge::CommandBool arm_cmd;
     ^
/home/nvidia/kd_px4_can/src/offboard/src/offboard_node.cpp:52:5: error: ‘arm_cmd’ was not declared in this scope
     arm_cmd.request.value=true;
     ^
make[2]: *** [CMakeFiles/offboard_node.dir/src/offboard_node.cpp.o] Error 1
make[1]: *** [CMakeFiles/offboard_node.dir/all] Error 2
make: *** [all] Error 2
